--- a/MDVRP_JC/MDVRP_JC.vcxproj
+++ b/MDVRP_JC/MDVRP_JC.vcxproj
@@ -86,7 +86,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_DEPRECATE</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -114,7 +114,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_DEPRECATE</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -145,17 +145,57 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DecodedFrogLeapSolution.h" />
+    <ClInclude Include="DistanceTable.h" />
+    <ClInclude Include="DistVect.h" />
+    <ClInclude Include="FeasibleSolCol.h" />
+    <ClInclude Include="FeasibleSolution.h" />
+    <ClInclude Include="FeasSolNode.h" />
+    <ClInclude Include="FloatDistanceTable.h" />
+    <ClInclude Include="FrogLeapController.h" />
+    <ClInclude Include="FrogLeapSolution.h" />
+    <ClInclude Include="FrogObject.h" />
+    <ClInclude Include="FrogObjectCol.h" />
+    <ClInclude Include="FrogObjNode.h" />
+    <ClInclude Include="Graph.h" />
+    <ClInclude Include="IndexList.h" />
+    <ClInclude Include="IndexListNode.h" />
+    <ClInclude Include="Pair.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TestCaseObj.h" />
+    <ClInclude Include="TspLibEuc2D.h" />
+    <ClInclude Include="Vehicle.h" />
+    <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DecodedFrogLeapSolution.cpp" />
+    <ClCompile Include="DistanceTable.cpp" />
+    <ClCompile Include="DistVect.cpp" />
+    <ClCompile Include="FeasibleSolCol.cpp" />
+    <ClCompile Include="FeasibleSolution.cpp" />
+    <ClCompile Include="FeasSolNode.cpp" />
+    <ClCompile Include="FloatDistanceTable.cpp" />
+    <ClCompile Include="FrogLeapController.cpp" />
+    <ClCompile Include="FrogLeapSolution.cpp" />
+    <ClCompile Include="FrogObject.cpp" />
+    <ClCompile Include="FrogObjectCol.cpp" />
+    <ClCompile Include="FrogObjNode.cpp" />
+    <ClCompile Include="Graph.cpp" />
+    <ClCompile Include="IndexList.cpp" />
+    <ClCompile Include="IndexListNode.cpp" />
     <ClCompile Include="MDVRP_JC.cpp" />
+    <ClCompile Include="Pair.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TestCaseObj.cpp" />
+    <ClCompile Include="TspLibEuc2D.cpp" />
+    <ClCompile Include="Vehicle.cpp" />
+    <ClCompile Include="Vertex.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
